fix vercel route to /login

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/login",
-      "destination": "https://vue-basic-flame.vercel.app"
+      "destination": "https://vue-basic-flame.vercel.app/"
     }
   ]
 }
