try redirect insstead of rewrite for vercel route to /login

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
-  "rewrites": [
+  "redirects": [
     {
       "source": "/login",
-      "destination": "https://vue-basic-flame.vercel.app/"
+      "destination": "https://vue-basic-flame.vercel.app/",
+      "statusCode": 302
     }
   ]
 }
+
